# nl2sql-bankbot

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  chat.py  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: __init__.py  chat.py  health.py
app/core/: config.py
app/db/: database.py
app/db/migrations/: env.py
app/db/migrations/versions/: 286c30f7f284_change_unique_constraint_to_entity_id_.py  9ab07670cfa3_initial_schema_with_entity_attribute_.py
app/db/models/: __init__.py  base.py  entity.py
app/db/repositories/: __init__.py  entity_repository.py
app/schemas/: chat.py
app/services/: __init__.py  llm_service.py  query_service.py  response_service.py  search_service.py
docker/: Dockerfile
sql/schema/: 00_init.sql  01_create_tables.sql
sql/seed/: 01_seed_data.sql
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_database.py  test_repository.py  test_services.py
